<resources>
    <string name="app_name">Indore Visita</string>
    <string name="title_landmarks">City Landmarks</string>
    <string name="title_eatery">City Eateries</string>
    <string name="title_shopping">City Shopping Centres</string>
    <string name="title_excursions">Excursions</string>
    <string name="title_about_city">About City</string>
    <string name="title_city_history">City History</string>
    <string name="title_city_culture">City Culture</string>
    <string name="title_how_to_reach">How to reach</string>
    <string name="about_city">The beautiful city of Indore in Madhya Pradesh state of <b>India</b>
        is located on the banks of the River Khan and Sarawati and is known for its architectural
        splendor in the form of monuments, palaces, and forts.
        \nIndore is a home to many industries, like automobile, textile, IT, and it gives ample
        of scopes to students and businessmens to find work opportunities in the city. The city
        have emerged as commercial capital and IT hub of Madhya Pradesh. The most famous institutes
        and companies are IIM Indore, DAVV, TCS, Infosys, Yash Technology.
        IIT Indore and Crystal IT Park are part of the great educational and
        technology center of Indore.
        \nThe city is famous for its food, festival, and handicrafts that give tourists a wide
        opportunity to spend quality time with family and friends and relish their holidays in the
        heart of India i.e. Madhya Pradesh.</string>
    <string name="city_history">The history of Indore is a tale of strife between the Mughals,
        Marathas and the British who were struggling to gain dominance of central India.
        According to the records, it was one Rao Nandlal Chaudhary who founded the city of Indore.
        When the Marathas came into power, they lost the third Battle of Panipath to Ahmad Shah
        Abdali, an Afghan invader. After that, they became powerless to resist the British and had
        to sue for peace. Under these terms, the Holkars became the rulers of Indore.
        \nMaharaja Malhar Rao Holkar was the founder of the Holkar dynasty. He was one of the
        greatest statesmen an warrior of his times. Indore remained as a part of the Holkar
        princedom during the British Raj. During the independence of India, it joined with a
        number of neighbouring princely states and became a part of Madhya Bharat. The latter
        was merged into Madhya Pradesh on November 1, 1956. </string>
    <string name="city_culture">The cultural heritage of Indore includes magnificent remains of its
        glorious past, soulful religious places and beautiful surroundings. Indore culture is a
        unique blend of various cultures from across the country and makes it a perfect destination
        to be explored. You will be enthralled to see the royalty and the simplicity of the city.
        It is known for its food and festivals and welcomes the visitors with warmth.\n Indore
        presents a good example of unity in diversity with major population of Hindus, sizeable
        minorities of Muslims, Janis, Christians and sikhs and Buddhists.There are a number
        of migrants in the city from different parts of nation too.
        \n The city has a true cosmopolitan nature. You will find people belonging to different
        cultural backgrounds and speaking varied languages. The major languages spoken in Indore
        are Hindi, Marathi, English, Rajasthani, Malwi, Punjabi and Sindhi.</string>
    <string name="how_to_reach"><b>By Air:</b> Indore is conveniently located in the center of
        India, making it easily accessible from all the major cities like Bhopal, Gwalior,
        Ahmedabad, Hyderabad, Kolkata, Nagpur, Jaipur, Raipur, Delhi and Mumbai. Indore airport is
        just 8 km away from the city and one can hire a prepaid taxi or even take a bus from the
        airport to reach hotel.
        \n<b>By Rail:</b> Indore railway station is connected through Ratlam division of the
        western railway and is accessible from the major citities in India including Mumbai, Pune,
        Nagpur, Delhi, Jaipur, Ahmedabad, and Vadodra.
        \n<b>By Road:</b> Indore is well connected to other cities of the state through state and
        national highways. Regular bus service is available from cities like Bhopal, Gwalior,
        Ujjain, and Sanchi to reach Indore</string>
    <string name="landmark1_title">Rajawada</string>
    <string name="landmark1_description">Synonymous with the heart of Indore city, it stands
        today as a mute witness to the bygone splendour of the Holkar rulers. This 200 year old
        seven-story historic palace of the Holkars is built in a mixture of Muslim, Maratha
        and French styles. The lower three floors are made of stone and the upper floors are
        made of wood, which made it very vulnerable to destruction by fire. Rajwada was burnt
        three times in its history; the last fire in 1984 took the greatest toll.Today only the
        front facade remains. Recent renovations have recreated some of the old glory of this
        beautiful palace.</string>
    <string name="landmark1_location">Rajwada circle</string>
    <string name="landmark1_fee">Indian Citizens – ₹ 10
        \nForeign nationals – ₹ 250
        \nVideography – ₹ 100
        \nPhotography – ₹ 25</string>
    <string name="landmark1_timing">10:00 am to 5:00 pm; closed on Mondays </string>
    <string name="landmark1_maps">https://goo.gl/maps/kfjLuCqgjAr</string>
    <string name="landmark2_title">Lal Baag Palace</string>
    <string name="landmark2_description">One of the grandest monuments the Holkar dynasty left
        Indore. A reflection of their taste, grandeur and lifestyle, its construction began in 1886
        under Tukoji Rao Holkar II, and was carried out in three phases. The final phase was
        completed in 1921 under Tukoji Rao Holkar III. Many royal receptions were held here.
        It has a total area of 28 hectares, and at one time it had the reputation of having one
        of the best rose gardens in the country.</string>
    <string name="landmark2_location">Indira Nagar</string>
    <string name="landmark2_fee">₹ 10</string>
    <string name="landmark2_timing">10:00 am to 5:00 pm; closed on Mondays </string>
    <string name="landmark2_maps">https://goo.gl/maps/xUwbG7um8SU2</string>
    <string name="landmark3_title">Bada Ganpati</string>
    <string name="landmark3_description"> This Hindu Temple was built in the year 1875. According
        to the mythology, one of the residents of the city of Avantika or Ujjain dreamt of Lord
        Ganesh in his sleep. So, he rose up on the next day and prepared for the enormous statue
        of Lord Ganesha, so that the Lord blesses him.
        Better known for its size than antiquity, this temple
        houses perhaps the largest Ganesh idol in the world measuring 25 feet from crown to foot.
        Created as a result of the dream of an Avantika (Ujjain) resident, Shri Dadhich,
        it was built in 1875.</string>
    <string name="landmark3_location">Malhar Gunj</string>
    <string name="landmark3_timing">5:00 am to 12:00 pm and 4:00 pm to 8:00 pm, Daily</string>
    <string name="landmark3_maps">https://goo.gl/maps/BLiYv9pS3tj</string>
    <string name="landmark4_title">Kanch Mandir</string>
    <string name="landmark4_description">This Jain temple is an architectural marvel in glass.
        The walls, ceilings, floors, pillars and door knobs are entirely inlaid with glass.
        Even paintings are done in glass. Atop is a special glass chamber which multiplies the
        three statues of Lord Shantinath, Aadinath &amp; Mahavira installed there into an indefinite
        number (said to be visible up to 24 times, corresponding to the 24 tirthankaras).</string>
    <string name="landmark4_location">Hukumchand Marg, Itwaria Bazaar</string>
    <string name="landmark4_timing">5:00 am to 12:00 pm and 4:00 pm to 8:00 pm , Daily</string>
    <string name="landmark4_maps">https://goo.gl/maps/DwjZM5Jsf1M2</string>
    <string name="landmark5_title">Gandhi Hall</string>
    <string name="landmark5_description">Built in 1904 and originally named King Edwards Hall,
        it was renamed Mahatma Gandhi Hall in 1948. Its architectural style is Indo-Gothic.
        Made in Seoni stone, its domes and staples are a landmark of Indore today. It has a
        four-faced clock tower in front, because of which it is locally known as Ghanta Ghar.
        It is frequently the venue for the various book and painting exhibitions, fairs and
        festivals held throughout the year. The building also has a library, a children\'s park
        and a temple.</string>
    <string name="landmark5_location">Indore GPO</string>
    <string name="landmark5_timing">10 AM to 6 PM, Daily</string>
    <string name="landmark5_maps">https://goo.gl/maps/gqkCkXN7gNT2</string>
    <string name="landmark6_title">Annapurna Mandir</string>
    <string name="landmark6_description">Prominent temple dedicated to the Hindu goddess of food
        featuring an ornate gate &amp; elephant statues. </string>
    <string name="landmark6_location">Kranti Kriplani Nagar</string>
    <string name="landmark6_maps">https://goo.gl/maps/XxxXQ8VXB7K2</string>
    <string name="landmark6_timings">07:00 AM to 08:00 PM, Daily</string>
    <string name="landmark7_title">Krishnapura Chhatri</string>
    <string name="landmark7_description">Krishnapura Chhatri are the tombs or cenotaphs erected in memory of
        dead Holkar rulers and their family members. The Chhatris picturesquely poised on the Khan
        river banks near Rajawada are incomparable in terms of Maratha architecture and sculpture
        of their period. At Chhatri Baag is the main collection of tombs housed in two compounds.
        Close by is the beautiful Bolia Sarkar's Chhatri constructed in 1858 AD in memory of Sardar
        Chimnaji Appa Sahib Bolia.</string>
    <string name="landmark7_location">Mahatma Gandhi Road</string>
    <string name="landmark7_maps">https://goo.gl/maps/stgzapPqFio</string>
    <string name="landmark7_timings">09:00 AM to 05:00 PM; closed on Sundays</string>
    <string name="landmark8_title">Khajrana Ganesh Temple</string>
    <string name="landmark8_description">Khajrana Ganesh Temple is a pilgrimage center in Indore,
        dedicated to Lord Ganpanti. This Temple is built in 1735 by Rani Ahilya Bai Holkar.
        The devotees circling around temple and tie a thread to pray Lord Ganesha for successfully
        completion of his work. The idol was found in a well and in 1735, it was taken out from
        the well and a temple was established in 1735 by Ahilyabai Holkar belonging to the Holkar
        dynasty of the Maratha Empire. It is said that the ancient statue in the temple statue was
        seen in a dream of a local Pandit Mangal Bhatt. After this dream, the queen Ahilya Bai
        Holkar excavated and installed the idol from under the ground and installed it. From where
        the statue was removed, there is a well, which is right in front of the temple.</string>
    <string name="landmark8_location">Khajrana Rd, Ganeshpuri Colony</string>
    <string name="landmark8_maps">https://goo.gl/maps/rkXnSmy4zyQ2</string>
    <string name="landmark8_timings">5 AM to 8 PM</string>
    <string name="landmark8_website">http://www.shreeganeshkhajrana.com/</string>
    <string name="landmark9_title">Gomatgiri</string>
    <string name="landmark9_description"> On the hill 10-12 km away from the heart of the city,
        the Jain Samaj has constructed a 21 feet statue of Lord Gomateshwar, a replica of the
        Bahubali statue of Shravanbelagola. Also built here are 24 marble temples with shilars
        for each tirthankar. This place offers a breathtaking view of Indore city by night. </string>
</resources>